--- a/client.css
+++ b/client.css
@@ -5,6 +5,10 @@
     box-sizing: border-box;
 }
 
+/* **********************
+***  template log-in  ***
+********************** */
+
 .template_login {
     width: 100%;
     height: 100vh;
@@ -58,7 +62,7 @@
     transition: max-height 0.5s;
     overflow: hidden;
 }
-input {
+.template_login input {
     width: 100%;
     background: transparent;
     border: 0;
@@ -70,11 +74,13 @@ input {
     color: #999;
 }
 
-form p{
+.template_login form p{
     text-align: left;
     font-size: 13px;
+    visibility: hidden;
 }
-form p a{
+
+.template_login form p a{
     text-decoration: none;
     color: #3c00a0;
 }
@@ -100,3 +106,4 @@ form p a{
     background: #eaeaea;
     color: #555;
 }
+
